# AEGIS

./: .gitignore  README.md
backend/: main.py  requirements.txt
prompt-firewall/: Dockerfile  README.md  aegis_db.sqlite3  alembic.ini  docker-compose.yml  init_db.py  pitch.md  pyproject.toml
prompt-firewall/alembic/: env.py
prompt-firewall/alembic/versions/: 001_initial_schema.py  73f17dec63d5_add_feedbackmodel.py  937ebadd40bc_add_output_and_canary_models.py
prompt-firewall/app/: main.py
prompt-firewall/app/api/: deps.py  router_documents.py  router_feedback.py  router_health.py  router_incidents.py  router_legacy.py  router_proxy.py  router_scan.py  router_urls.py  router_ws.py
prompt-firewall/app/core/: config.py  constants.py  exceptions.py  logging.py  security.py
prompt-firewall/app/db/: models.py  session.py
prompt-firewall/app/providers/: base.py  openai_provider.py
prompt-firewall/app/scanners/: base.py  engine.py  registry.py
prompt-firewall/app/schemas/: common.py  events.py  feedback.py  ingest.py  output.py  proxy.py  scan.py
prompt-firewall/app/services/: canary_service.py  chunking_service.py  document_service.py  event_service.py  normalizer.py  output_scan_service.py  persistence_service.py  policy_engine.py  readiness_service.py  routing_service.py  scan_orchestrator.py  url_service.py  ws_broadcaster.py
prompt-firewall/conf/: policies.yaml  providers.yaml
prompt-firewall/rules/: injections.yar  suspicious_patterns.regex.json
prompt-firewall/scripts/: attack_replay.py  run_eval_suite.py
prompt-firewall/tests/: conftest.py
(+73 files in other folders)
